Pre-extraction refactors